Fix deprecated uses of newInstance() (#1887)
* Fix deprecated uses of newInstance()
* Fix suppression of exception which could cause test to erroneously pass.