@@ -3,6 +3,7 @@ package picard.sam;
 import htsjdk.samtools.SamStreams;
 import htsjdk.samtools.cram.CRAMException;
 import htsjdk.samtools.util.IOUtil;
+import htsjdk.samtools.util.RuntimeIOException;
 import org.testng.Assert;
 import org.testng.annotations.AfterTest;
 import org.testng.annotations.DataProvider;
@@ -10,6 +11,7 @@ import org.testng.annotations.Test;
 import picard.cmdline.CommandLineProgram;
 
 import java.io.*;
+import java.lang.reflect.InvocationTargetException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -108,7 +110,7 @@ public class CramCompatibilityTest {
     public void testShouldWriteCRAMWhenCRAMWithReference(String program,
                                                          String parameters,
                                                          String cramFile,
-                                                         String reference) throws IOException, IllegalAccessException, InstantiationException, ClassNotFoundException {
+                                                         String reference) throws IOException {
         if (!program.equals("picard.sam.SplitSamByLibrary")) {
             final File outputFile = createTempCram(program);
             launchProgram(program, cramFile, outputFile.getAbsolutePath(), parameters, reference);
@@ -160,7 +162,7 @@ public class CramCompatibilityTest {
     @Test(dataProvider = "programArgsForCRAMWithoutReferenceToFail", expectedExceptions = {CRAMException.class, IllegalArgumentException.class})
     public void testShouldFailWhenCRAMWithoutReference(String program,
                                                        String parameters,
-                                                       String cramFile) throws IOException, IllegalAccessException, InstantiationException, ClassNotFoundException {
+                                                       String cramFile) throws IOException {
         if (!program.equals("picard.sam.SplitSamByLibrary")) {
             final File outputFile = createTempCram(program);
             launchProgram(program, cramFile, outputFile.getAbsolutePath(), parameters, null);
@@ -210,7 +212,7 @@ public class CramCompatibilityTest {
     @Test(dataProvider = "programArgsWithUnmappedCRAM")
     public void testShouldWriteCRAMWhenUnmappedCRAMWithoutReference(String program,
                                                                     String parameters,
-                                                                    String cramFile) throws IOException, IllegalAccessException, InstantiationException, ClassNotFoundException {
+                                                                    String cramFile) throws IOException {
         if (!program.equals("picard.sam.SplitSamByLibrary")) {
             final File outputFile = createTempCram(program);
             launchProgram(program, cramFile, outputFile.getAbsolutePath(), parameters, null);
@@ -222,7 +224,7 @@ public class CramCompatibilityTest {
         }
     }
 
-    private File createTempCram(String name) throws IOException {
+    private File createTempCram(String name) {
         return createTempFile(name, ".cram");
     }
 
@@ -242,7 +244,7 @@ public class CramCompatibilityTest {
                                String input,
                                String output,
                                String exParams,
-                               String reference) throws ClassNotFoundException, IllegalAccessException, InstantiationException {
+                               String reference) {
         final Collection<String> args = new ArrayList<>();
 
         if (input != null) {
@@ -258,7 +260,12 @@ public class CramCompatibilityTest {
             args.add("REFERENCE_SEQUENCE=" + new File(reference).getAbsolutePath());
         }
 
-        final CommandLineProgram program = (CommandLineProgram) Class.forName(programClassname).newInstance();
+        final CommandLineProgram program;
+        try {
+            program = (CommandLineProgram) Class.forName(programClassname).getDeclaredConstructor().newInstance();
+        } catch (ReflectiveOperationException e){
+            throw new RuntimeException(e);
+        }
         program.instanceMain(args.toArray(new String[0]));
     }
 
@@ -267,7 +274,7 @@ public class CramCompatibilityTest {
         try (InputStream in = new FileInputStream(outputFile)) {
             Assert.assertTrue(SamStreams.isCRAMFile(new BufferedInputStream(in)), "File " + outputFile.getAbsolutePath() + " is not a CRAM.");
         } catch (IOException e) {
-            e.printStackTrace();
+            throw new RuntimeIOException(e);
         }
     }
 
